--- a/music_website.html
+++ b/music_website.html
@@ -180,7 +180,7 @@
                     <h3>其他聯絡方式</h3>
                     <p><strong>電話：</strong> (02) 1234-5678</p>
                     <p><strong>地址：</strong> 台北市信義區音樂街123號</p>
-                    <p><strong>營業時間：</strong> 週一至週日 10:00-21:00</p>
+                    <p><strong>營業時間：</strong> 睡飽才營業</p>
                 </div>
             </div>
         </section>
