--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>唱歌幸福論 Starring happiness</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles_css.css">
 </head>
 <body>
     <header>
@@ -190,6 +190,6 @@
         <p>&copy; 2025 唱歌幸福論 Starring happiness. All rights reserved.</p>
     </footer>
 
-    <script src="script.js"></script>
+    <script src="script_js.js"></script>
 </body>
 </html>
