--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <nav>
-            <a href="#" class="logo">
+            <a href="#" class="logo" onclick="showPage('home')">
                 唱歌幸福論<br>
                 <span>Starring happiness</span>
             </a>
@@ -222,6 +222,6 @@
         <p>&copy; 2025 唱歌幸福論 Starring happiness. All rights reserved.</p>
     </footer>
 
-     <script src="script_js.js"></script>
+    <script src="script_js.js"></script>
 </body>
 </html>
