--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>唱歌幸福論 Starring happiness</title>
+    <title>歌唱幸福論 Starring happiness</title>
     <link rel="stylesheet" href="styles_css.css">
 </head>
 <body>
     <header>
         <nav>
             <a href="#" class="logo" onclick="showPage('home')">
-                唱歌幸福論<br>
+                歌唱幸福論<br>
                 <span>Starring happiness</span>
             </a>
             <ul class="nav-links">
@@ -59,7 +59,7 @@
         <!-- 首頁 -->
         <section id="home" class="page active">
             <div class="hero">
-                <h1>唱歌幸福論</h1>
+                <h1>歌唱幸福論</h1>
                 <div class="subtitle">Starring happiness</div>
                 <p>用歌聲傳遞幸福，讓每個音符都充滿愛與希望。在這裡，我們相信每個人都有屬於自己的美妙聲音。</p>
                 <a href="#" onclick="showPage('courses')" class="cta-button">開始學習音樂</a>
@@ -219,7 +219,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2025 唱歌幸福論 Starring happiness. All rights reserved.</p>
+        <p>&copy; 2025 歌唱幸福論 Starring happiness. All rights reserved.</p>
     </footer>
 
     <script src="script_js.js"></script>
