--- a/index.html
+++ b/index.html
@@ -9,50 +9,57 @@
 <body>
     <header>
         <nav>
-            <a href="#" class="logo" onclick="showPage('home')">
-                歌唱幸福論<br>
-                <span>Starring happiness</span>
-            </a>
-            <ul class="nav-links">
-        
-                <li class="dropdown">
-                    <a href="#" onclick="showPage('articles')">文章</a>
-                    <div class="dropdown-menu">
-                        <a href="#" onclick="showPage('articles')">如何找到屬於自己的音樂風格</a>
-                        <a href="#" onclick="showPage('articles')">呼吸技巧對唱歌的重要性</a>
-                        <a href="#" onclick="showPage('articles')">音樂與情感的完美結合</a>
-                        <a href="#" onclick="showPage('articles')">舞台表演的自信建立</a>
-                    </div>
-                </li>
-                <li class="dropdown">
-                    <a href="#" onclick="showPage('courses')">購買課程</a>
-                    <div class="dropdown-menu">
-                        <a href="#" onclick="showPage('courses')">基礎發聲課程</a>
-                        <a href="#" onclick="showPage('courses')">進階演唱技巧</a>
-                        <a href="#" onclick="showPage('courses')">音樂創作班</a>
-                    </div>
-                </li>
-                <li class="dropdown">
-                    <a href="#" onclick="showPage('faq')">常見問題</a>
-                    <div class="dropdown-menu">
-                        <a href="#" onclick="showPage('faq')">完全沒有音樂基礎可以學習嗎？</a>
-                        <a href="#" onclick="showPage('faq')">課程是一對一教學還是團體課程？</a>
-                        <a href="#" onclick="showPage('faq')">需要自備樂器嗎？</a>
-                        <a href="#" onclick="showPage('faq')">如果無法固定時間上課怎麼辦？</a>
-                    </div>
-                </li>
-                <li class="dropdown">
-                    <a href="#" onclick="showPage('contact')">聯絡我們</a>
-                    <div class="dropdown-menu">
-                        <a href="#" onclick="showPage('contact')">線上聯絡表單</a>
-                        <a href="#" onclick="showPage('contact')">電話預約諮詢</a>
-                        <a href="#" onclick="showPage('contact')">教室地址資訊</a>
-                        <a href="#" onclick="showPage('contact')">營業時間</a>
-                    </div>
-                </li>
-            </ul>
-        </nav>
-        <div class="glass-overlay"></div>
+  <a href="#" class="logo" onclick="showPage('home')">
+    歌唱幸福論<br>
+    <span>Starring happiness</span>
+  </a>
+
+  <!-- 左側選單 -->
+  <ul class="nav-links">
+    <li class="dropdown">
+      <a href="#" onclick="showPage('articles')">文章</a>
+      <div class="dropdown-menu">
+        <a href="#" onclick="showPage('articles')">如何找到屬於自己的音樂風格</a>
+        <a href="#" onclick="showPage('articles')">呼吸技巧對唱歌的重要性</a>
+        <a href="#" onclick="showPage('articles')">音樂與情感的完美結合</a>
+        <a href="#" onclick="showPage('articles')">舞台表演的自信建立</a>
+      </div>
+    </li>
+
+    <li class="dropdown">
+      <a href="#" onclick="showPage('faq')">常見問題</a>
+      <div class="dropdown-menu">
+        <a href="#" onclick="showPage('faq')">完全沒有音樂基礎可以學習嗎？</a>
+        <a href="#" onclick="showPage('faq')">課程是一對一教學還是團體課程？</a>
+        <a href="#" onclick="showPage('faq')">需要自備樂器嗎？</a>
+        <a href="#" onclick="showPage('faq')">如果無法固定時間上課怎麼辦？</a>
+      </div>
+    </li>
+
+    <li class="dropdown">
+      <a href="#" onclick="showPage('contact')">聯絡我們</a>
+      <div class="dropdown-menu">
+        <a href="#" onclick="showPage('contact')">線上聯絡表單</a>
+        <a href="#" onclick="showPage('contact')">電話預約諮詢</a>
+        <a href="#" onclick="showPage('contact')">教室地址資訊</a>
+        <a href="#" onclick="showPage('contact')">營業時間</a>
+      </div>
+    </li>
+  </ul>
+
+  <!-- 右側選單（購買課程） -->
+  <ul class="nav-links right-nav">
+    <li class="dropdown">
+      <a href="#" onclick="showPage('courses')">購買課程</a>
+      <div class="dropdown-menu">
+        <a href="#" onclick="showPage('courses')">基礎發聲課程</a>
+        <a href="#" onclick="showPage('courses')">進階演唱技巧</a>
+        <a href="#" onclick="showPage('courses')">音樂創作班</a>
+      </div>
+    </li>
+  </ul>
+</nav>
+<div class="glass-overlay"></div>
     </header>
 
     <main>
