--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <span>Starring happiness</span>
   </a>
 
-  <!-- 左側選單 -->
+  <!-- 導覽列全部放在同一個 ul -->
   <ul class="nav-links">
     <li class="dropdown">
       <a href="#" onclick="showPage('articles')">文章</a>
@@ -45,11 +45,8 @@
         <a href="#" onclick="showPage('contact')">營業時間</a>
       </div>
     </li>
-  </ul>
 
-  <!-- 右側選單（購買課程） -->
-  <ul class="nav-links right-nav">
-    <li class="dropdown">
+    <li class="dropdown right-nav">
       <a href="#" onclick="showPage('courses')">購買課程</a>
       <div class="dropdown-menu">
         <a href="#" onclick="showPage('courses')">基礎發聲課程</a>
