--- a/index.html
+++ b/index.html
@@ -19,39 +19,55 @@
     <li class="dropdown">
       <a href="#" onclick="showPage('articles')">文章</a>
       <div class="dropdown-menu">
-        <a href="#" onclick="showPage('articles')">如何找到屬於自己的音樂風格</a>
-        <a href="#" onclick="showPage('articles')">呼吸技巧對唱歌的重要性</a>
-        <a href="#" onclick="showPage('articles')">音樂與情感的完美結合</a>
-        <a href="#" onclick="showPage('articles')">舞台表演的自信建立</a>
+        <div class="dropdown-content">
+          <div class="dropdown-inner">
+            <a href="#" onclick="showPage('articles')">如何找到屬於自己的音樂風格</a>
+            <a href="#" onclick="showPage('articles')">呼吸技巧對唱歌的重要性</a>
+            <a href="#" onclick="showPage('articles')">音樂與情感的完美結合</a>
+            <a href="#" onclick="showPage('articles')">舞台表演的自信建立</a>
+          </div>
+        </div>
       </div>
     </li>
 
     <li class="dropdown">
       <a href="#" onclick="showPage('faq')">常見問題</a>
       <div class="dropdown-menu">
-        <a href="#" onclick="showPage('faq')">完全沒有音樂基礎可以學習嗎？</a>
-        <a href="#" onclick="showPage('faq')">課程是一對一教學還是團體課程？</a>
-        <a href="#" onclick="showPage('faq')">需要自備樂器嗎？</a>
-        <a href="#" onclick="showPage('faq')">如果無法固定時間上課怎麼辦？</a>
+        <div class="dropdown-content">
+          <div class="dropdown-inner">
+            <a href="#" onclick="showPage('faq')">完全沒有音樂基礎可以學習嗎？</a>
+            <a href="#" onclick="showPage('faq')">課程是一對一教學還是團體課程？</a>
+            <a href="#" onclick="showPage('faq')">需要自備樂器嗎？</a>
+            <a href="#" onclick="showPage('faq')">如果無法固定時間上課怎麼辦？</a>
+          </div>
+        </div>
       </div>
     </li>
 
     <li class="dropdown">
       <a href="#" onclick="showPage('contact')">聯絡我們</a>
       <div class="dropdown-menu">
-        <a href="#" onclick="showPage('contact')">線上聯絡表單</a>
-        <a href="#" onclick="showPage('contact')">電話預約諮詢</a>
-        <a href="#" onclick="showPage('contact')">教室地址資訊</a>
-        <a href="#" onclick="showPage('contact')">營業時間</a>
+        <div class="dropdown-content">
+          <div class="dropdown-inner">
+            <a href="#" onclick="showPage('contact')">線上聯絡表單</a>
+            <a href="#" onclick="showPage('contact')">電話預約諮詢</a>
+            <a href="#" onclick="showPage('contact')">教室地址資訊</a>
+            <a href="#" onclick="showPage('contact')">營業時間</a>
+          </div>
+        </div>
       </div>
     </li>
 
     <li class="dropdown right-nav">
       <a href="#" onclick="showPage('courses')">購買課程</a>
       <div class="dropdown-menu">
-        <a href="#" onclick="showPage('courses')">基礎發聲課程</a>
-        <a href="#" onclick="showPage('courses')">進階演唱技巧</a>
-        <a href="#" onclick="showPage('courses')">音樂創作班</a>
+        <div class="dropdown-content">
+          <div class="dropdown-inner">
+            <a href="#" onclick="showPage('courses')">基礎發聲課程</a>
+            <a href="#" onclick="showPage('courses')">進階演唱技巧</a>
+            <a href="#" onclick="showPage('courses')">音樂創作班</a>
+          </div>
+        </div>
       </div>
     </li>
   </ul>
